# stock_analyzer

./: .env.example  README.md  agentstack.json  pyproject.toml
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  firecrawl_tool.py
